kubernetes/k8s.yaml
# for AMD based processers
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spec-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spec
  template:
    metadata:
      labels:
        app: spec
    spec:
      containers:
      - name: spec
        image: chaituchowdary/app:latest
---

apiVersion: v1
kind: Service
metadata:
  name: spec-service
spec:
  selector:
    app: spec
  ports:
  - protocol: TCP
    port: 9000 # Exposes port 9000 externally
    targetPort: 8800
  type: LoadBalancer
