kubernetes/k8s.yml
# for arm based processers
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spec-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spec
  template:
    metadata:
      labels:
        app: spec
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: spec
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: spec
        image: chaituchowdary/app:arm64_latest
---

apiVersion: v1
kind: Service
metadata:
  name: spec-service
spec:
  selector:
    app: spec
  ports:
  - protocol: TCP
    port: 9000 # Exposes port 9000 externally
    targetPort: 8800
  type: ClusterIP
#  type: LoadBalancer
